--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -4,7 +4,7 @@
 
 {% if question.author == user %}
     <div>
-        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'polls:choice-create' question.id %}">Create a choice for Question ID {{ question.id}} </a>
+        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'polls:choice-create' %}">Create a choice for Question ID {{ question.id}} </a>
         <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'polls:question-delete' question.id %}">Delete</a>
     </div>
 {% endif %}
