--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -65,9 +65,8 @@
                 <p class='text-muted'>Issue Tracker will track important issues and provide insightful analysis results 
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About IssueTracker</a></li>
-                    <li class="list-group-item list-group-item-light">Link to Github (tbd)</li>
-                    <li class="list-group-item list-group-item-light">Link to ... </li>
-                    <li class="list-group-item list-group-item-light">etc ... </li>
+                    <li class="list-group-item list-group-item-light"><a href="{% https://github.com/iburn78/issuetracker %}">IssueTracker github</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{% https://issuetracker-team.slack.com %}">Issuetracker-Team Slack Page<a></li>
                   </ul>
                 </p>
               </div>
