another minor modification

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -65,8 +65,8 @@
                 <p class='text-muted'>Issue Tracker will track important issues and provide insightful analysis results 
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About IssueTracker</a></li>
-                    <li class="list-group-item list-group-item-light"><a href="https://github.com/iburn78/issuetracker">IssueTracker github</a></li>
-                    <li class="list-group-item list-group-item-light"><a href="https://issuetracker-team.slack.com">Issuetracker-Team Slack Page<a></li>
+                    <li class="list-group-item list-group-item-light"><a href="https://github.com/iburn78/issuetracker" target="_blank">IssueTracker github</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="https://issuetracker-team.slack.com" target="_blank">Issuetracker-Team Slack Page<a></li>
                   </ul>
                 </p>
               </div>
