--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,10 +25,12 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
+                  <!--
                   <a class="nav-item nav-link" href="{% url 'blog-home' %}">Posts</a>
-                  <a class="nav-item nav-link" href="{% url 'analysis-list' %}">Analyses</a>
+                  <a class="nav-item nav-link" href="">Analyses</a> url 'analysis-list' 
                   <a class="nav-item nav-link" href="{% url 'polls:index' %}">Polls</a>
                   <a class="nav-item nav-link" href="{% url 'books:index' %}">Library</a>
+                  -->
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
@@ -62,11 +64,10 @@
             <div class="col-md-4">
               <div class="content-section">
                 <h4>Issue Tracker</h4>
-                <p class='text-muted'>Issue Tracker will track important issues and provide insightful analysis results 
+                <p class='text-muted'> more on issuetracker...
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About IssueTracker</a></li>
                     <li class="list-group-item list-group-item-light"><a href="https://github.com/iburn78/issuetracker" target="_blank">IssueTracker github</a></li>
-                    <li class="list-group-item list-group-item-light"><a href="https://issuetracker-team.slack.com" target="_blank">Issuetracker-Team Slack Page<a></li>
                   </ul>
                 </p>
               </div>
