--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,9 +1,10 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<article class="media content-section">
+<article>  <!-- class="media content-section"> -->
+	<div class="border-top my-0"></div>
   <div class="media-body">
     <div class="article-metadata">
-      <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+      <img class="rounded article-img" src="{{ object.author.profile.image.url }}">
         <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
         <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
 	{% if object.author == user %}
@@ -11,11 +12,13 @@
              <a class="btn btn-danger btn-sm mt-1 mb-1 float-right" href="{% url 'post-delete' object.id %}">Delete</a>
 	{% endif %}
       </div>
-      <h2 class="article-title">{{ object.title }}</h2>
-      <p class="article-content">{{ object.content }}</p>
+  </div>
+      <h4 class="article-title">{{ object.title }}</h4>
     {% if object.image %}
       <img src="{{ object.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
     {% endif %}
+      <p class="article-content">{{ object.content }}</p>
+			<div class="border-top my-0">
    </div>
 </article>
 {% endblock content %}
