--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,20 +1,20 @@
 {% extends "blog/base.html" %}
 	{% block content %}
-	<h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+	<h4 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h4>
 	{% for post in posts %}
-        <article class="media content-section">
+        <article>
+	        <div class="border-top my-0"></div>
 			<div class="media-body">
 				<div class="article-metadata">
-				<img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+				<img class="rounded article-img" src="{{ post.author.profile.image.url }}">
 		<a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
-            </div>
-	    <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+            </div></div>
+	    <h4><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h4>
 			{% if post.image %}
 			<img src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
 			{% endif %}
-          </div>
+            <p class="article-content">{{ post.content }}</p>
         </article>
 	{% endfor %}
 	{% if is_paginated %}
