--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,6 +17,9 @@
     {% if object.image %}
       <img src="{{ object.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
     {% endif %}
+      {% for tag in object.tags.all %}
+      <a href="#" class="badge badge-info" >{{ tag }}</a>
+      {% endfor %}
       <p class="article-content">{{ object.content }}</p>
 			<div class="border-top my-0">
    </div>
