--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,9 @@
 {% extends "blog/base.html" %}
 	{% block content %}
+			<p>Common Tags: 
+            {% for mt in common_tags %}
+                <a href="#" class="badge badge-success">{{mt}}</a>
+			{% endfor %}</p>
 	{% for post in posts %}
 		<article>   <!-- class="media content-section"> -->
 			<div class="border-top my-0"></div>
@@ -14,6 +18,11 @@
 			{% if post.image %}
 			<img class="img-fluid" src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
 			{% endif %}
+			<div style="display:flex">
+				{% for tag in post.tags.all %}
+				<a href="{% url 'tagged' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a>
+				{% endfor %}
+            </div>
 			<p class="article-content">{{ post.content }}</p>
         </article>
 	{% endfor %}
