--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,6 +1,10 @@
 {% extends "blog/base.html" %}
 	{% block content %}
-	<h4 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h4>
+				<p>Common Tags: 
+            {% for mt in common_tags %}
+                <a href="#" class="badge badge-success">{{mt}}</a>
+			{% endfor %}
+	</p><h4 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h4>
 	{% for post in posts %}
         <article>
 	        <div class="border-top my-0"></div>
@@ -14,6 +18,11 @@
 			{% if post.image %}
 			<img src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
 			{% endif %}
+			<div style="display:flex">
+				{% for tag in post.tags.all %}
+				<a href="{% url 'tagged' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a>
+				{% endfor %}
+            </div>
             <p class="article-content">{{ post.content }}</p>
         </article>
 	{% endfor %}
