--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,8 +1,8 @@
 {% extends "blog/base.html" %}
 	{% block content %}
-			<p>Common Tags: 
+			<p>Most Common Tags: 
             {% for mt in common_tags %}
-                <a href="#" class="badge badge-success">{{mt}}</a>
+                <a href="{% url 'tagged-posts' mt.id %}" class="badge badge-success">#{{mt}}</a>
 			{% endfor %}</p>
 	{% for post in posts %}
 		<article>   <!-- class="media content-section"> -->
@@ -14,17 +14,18 @@
               <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
 			  </div>
 			</div>
-	    <h4><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h4>
+	    <h4><a class="article-title mt-2 mb-2" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h4>
 			{% if post.image %}
 			<img class="img-fluid" src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
 			{% endif %}
 			<div style="display:flex">
 				{% for tag in post.tags.all %}
-				<a href="{% url 'tagged' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a>
+				<a href="{% url 'tagged-posts' tag.id %}" class="mr-1 badge badge-info">#{{ tag }}</a>
 				{% endfor %}
             </div>
-			<p class="article-content">{{ post.content }}</p>
+			<p class="article-content mt-2 mb-1">{{ post.content }}</p>
         </article>
+	<p align = 'right'><small class="text-muted">-- issuetracker post</small></p>
 	{% endfor %}
 	{% if is_paginated %}
              {% if page_obj.has_previous %}
