--- a/blog/templates/blog/tag_posts.html
+++ b/blog/templates/blog/tag_posts.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 	{% block content %}
-	<h4 class="mb-3">Posts by <b> {{ view.kwargs.username }} </b> ({{ page_obj.paginator.count }})</h4>
-	{% for post in posts %}
+	<h4 class="mb-3">Posts with tag: <b> {{ current_tag }} </b> ({{ page_obj.paginator.count }})</h4>
+	{% for post in tagged_posts %}
         <article>
 	        <div class="border-top my-0"></div>
 			<div class="media-body">
