--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -20,7 +20,7 @@
 			{% endif %}
 			<div style="display:flex">
 				{% for tag in post.tags.all %}
-				<a href="{% url 'tagged-posts' tag.id %}" class="mr-1 badge badge-info">#{{ tag }}</a>
+				<a href="{% url 'tagged-posts' tag.id %}" class="mr-1 badge badge-info mt-1">#{{ tag }}</a>
 				{% endfor %}
             </div>
 			<p class="article-content mt-2 mb-1">{{ post.content }}</p>
