--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,17 +10,14 @@
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
       <link rel="stylesheet" href="/static/css/tagsinput.css" />
-		  {% if title %}
-	      	<title> Issue Tracker - {{ title }} </title>
-		  {% else %}
-		     	<title> Issue Tracker</title>
-		  {% endif %}
+		  <title> Issue Tracker</title>
+      <link rel="icon" href="/media/IssueTracker_Logo.png">
     </head>
     <body>
         <header class="site-header">
           <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-				<a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Issue Tracker</a>
+				<a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Issue Tracker <small><i>(beta)</i></small></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -59,11 +56,11 @@
             </div>
             <div class="col-md-4">
               <div class="content-section">
-                <h4>Issue Tracker</h4>
+                <h5>Issue Tracker <small><i>(beta)</i></small></h5>
                 <p class='text-muted'> more on issuetracker...
                   <ul class="list-group">
-                    <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About IssueTracker</a></li>
-                    <li class="list-group-item list-group-item-light"><a href="https://github.com/iburn78/issuetracker" target="_blank">IssueTracker github</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About Issue Tracker</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="https://github.com/iburn78/issuetracker" target="_blank">Issue Tracker github</a></li>
                   </ul>
                 </p>
               </div>
