--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -9,14 +9,14 @@
 			<div class="border-top my-0"></div>
 			<div class="media-body">
 			  <div class="article-metadata">
-			  <img class="rounded article-img" src="{{ post.author.profile.image.url }}">
+			  <img class="rounded article-img mt-1 mb-0" src="{{ post.author.profile.image.url }}">
               <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
 			  </div>
 			</div>
 	    <h4><a class="article-title mt-2 mb-2" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h4>
 			{% if post.image %}
-			<img class="img-fluid" src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
+			<img class="img-fluid full mx-w-100" src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
 			{% endif %}
 			<div style="display:flex">
 				{% for tag in post.tags.all %}
