--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,7 @@
 	<div class="border-top my-0"></div>
   <div class="media-body">
     <div class="article-metadata">
-      <img class="rounded article-img" src="{{ object.author.profile.image.url }}">
+      <img class="rounded article-img mt-1 mb-0" src="{{ object.author.profile.image.url }}">
         <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
         <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
 	{% if object.author == user %}
