--- a/blog/templates/blog/tag_posts.html
+++ b/blog/templates/blog/tag_posts.html
@@ -6,7 +6,7 @@
 	        <div class="border-top my-0"></div>
 			<div class="media-body">
 				<div class="article-metadata">
-				<img class="rounded article-img" src="{{ post.author.profile.image.url }}">
+				<img class="rounded article-img mt-1 mb-0" src="{{ post.author.profile.image.url }}">
 		<a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
             </div></div>
