--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -16,7 +16,7 @@
 			</div>
 	    <h4><a class="article-title mt-2 mb-2" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h4>
 			{% if post.image %}
-			<img class="img-fluid full mx-w-100" src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
+			<img class="img-fluid full" src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
 			{% endif %}
 			<div style="display:flex">
 				{% for tag in post.tags.all %}
