--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -44,7 +44,7 @@
 
         <main role="main" class="container">
           <div class="row">
-            <div class="mx-w-100">
+            <div class="mx-w-100"><!--col-md-8-->
 	      {% if messages %}
 	          {% for message in messages %}
 		      <div class="alert alert-{{ message.tags }}">
