--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,18 +5,18 @@
                 <a href="{% url 'tagged-posts' mt.id %}" class="badge badge-success">#{{mt}}</a>
 			{% endfor %}</p>
 	{% for post in posts %}
-		<article>   <!-- class="media content-section"> -->
-			<div class="border-top my-0"></div>
-			<div class="media-body">
+		<article>   
+			<div class="border-top border-warning"> </div>
 			  <div class="article-metadata">
 			  <img class="rounded article-img mt-1 mb-0" src="{{ post.author.profile.image.url }}">
               <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
 			  </div>
-			</div>
 	    <h4><a class="article-title mt-2 mb-2" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h4>
 			{% if post.image %}
-			<img class="img-fluid full" src="{{ post.image.url }}" alt = "Images for this post" style="width:100%;height:100%;object-fit:contain;border:0;">
+			<div class="row">
+			<img class="img-fluid" src="{{ post.image.url }}" alt = "Image for this post"> 
+			</div>
 			{% endif %}
 			<div style="display:flex">
 				{% for tag in post.tags.all %}
