--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -45,7 +45,7 @@
 
         <main role="main" class="container">
           <div class="row">
-            <div class="col-md-8 img_sm">
+            <div class="col-md-8">
 	      {% if messages %}
 	          {% for message in messages %}
 		      <div class="alert alert-{{ message.tags }}">
