--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -27,5 +27,5 @@
       <p class="article-content mt-2 mb-1">{{ object.content }}</p>
 </article>
 <p align = 'right'><small class="text-muted">-- issuetracker post</small><p>
-	<a class="btn btn-primary btn-sm mt-1 mb-1 float-right" href="{% url 'blog-home' %}">Post lists</a>
+	<a class="btn btn-primary btn-sm mt-1 mb-1 float-right" href="{% url 'blog-home' %}">Posts Home</a>
 {% endblock content %}
