--- a/blog/static/blog/tagsinput.css
+++ b/blog/static/blog/tagsinput.css
@@ -1,27 +1,24 @@
 /*
  * bootstrap-tagsinput v0.8.0
- * 
  */
-
  .bootstrap-tagsinput {
     border: solid 1px #e9ecee;
-  border-radius: 0;
-  color: #8e9091;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  height: 48px;
-  padding: 8px 20px;
-  font-size: 16px;
+    border-radius: 0;
+    color: #8e9091;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    height: 48px;
+    padding: 8px 20px;
+    font-size: 16px;
   }
   .bootstrap-tagsinput input {
-  border: none;
-  border-radius: 0;
-  color: #8e9091;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  
+    border: none;
+    border-radius: 0;
+    color: #8e9091;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
   }
   .badge-tag{
     background-color: #17a2b8;
@@ -57,8 +54,8 @@
     font-size:13px
   }
   .bootstrap-tagsinput .badge [data-role="remove"]:hover:after {
-  
-    background-color:rgba(0, 0, 0, 0.62);}
+    background-color:rgba(0, 0, 0, 0.62);
+  }
   .bootstrap-tagsinput .badge [data-role="remove"]:hover:active {
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   }
