--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,8 @@
       <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
       <link rel="stylesheet" href="{% static 'blog/tagsinput.css' %}" />
       <link rel="stylesheet" href="{% static 'blog/issuetracker_style.css' %}" />
+
+    	<!-- Website title and logo -->
 		  <title> Issue Tracker</title>
 		  <link rel="icon" href="{% static 'blog/IssueTracker_Logo.png' %}">
     </head>
@@ -18,9 +20,9 @@
         <header class="site-header">
           <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-				<a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Issue Tracker <small><i>(beta)</i></small></a>
+				      <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Issue Tracker <small><i>(beta)</i></small></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
@@ -29,15 +31,14 @@
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-		    {% if user.is_authenticated %}
-		        <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
-		        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-		        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-		    {% else %}
-		        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-		    {% endif %}
-
+		               {% if user.is_authenticated %}
+		                   <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+		                   <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+		                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+		               {% else %}
+                       <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                       <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+		               {% endif %}
                 </div>
               </div>
             </div>
@@ -47,21 +48,22 @@
         <main role="main" class="container">
           <div class="row">
             <div class="col-md-8">
-	      {% if messages %}
-	          {% for message in messages %}
-		      <div class="alert alert-{{ message.tags }}">
-			  {{ message }}
-	 	      </div>
-		  {% endfor %}
-	      {% endif %} 
+      	      {% if messages %}
+      	        {% for message in messages %}
+      		        <div class="alert alert-{{ message.tags }}">
+      			        {{ message }}
+      	 	        </div>
+        		    {% endfor %}
+	            {% endif %} 
               {% block content %}{% endblock %}
             </div>
             <div class="col-md-4">
               <div class="content-section">
-		      <h5><img class="article-img" src="{% static 'blog/IssueTracker_Logo.png' %}">Issue Tracker <small><i>(beta)</i></small></h5>
+		            <h5><img class="article-img" src="{% static 'blog/IssueTracker_Logo.png' %}">Issue Tracker <small><i>(beta)</i></small></h5>
                 <p class='text-muted'> more on issuetracker...
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About Issue Tracker</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{% url 'website-stats' %}">Issue Tracker Statistics</a></li>
                     <li class="list-group-item list-group-item-light"><a href="https://github.com/iburn78/issuetracker" target="_blank">Issue Tracker github</a></li>
                   </ul>
                 </p>
@@ -79,7 +81,7 @@
     <script>
     $("#post-form").submit(function(e){
         e.preventDefault();
-        });</script>
+        });
+    </script>
     </body>
 </html>
-
