--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,27 +5,28 @@
   <div class="media-body">
     <div class="article-metadata">
       <img class="rounded article-img mt-1 mb-0" src="{{ object.author.profile.image.url }}">
-        <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
-        <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
-	{% if object.author == user %}
-             <a class="btn btn-secondary btn-sm mt-1 mb-1 float-right" href="{% url 'post-update' object.id %}">Update</a>
-             <a class="btn btn-danger btn-sm mt-1 mb-1 float-right" href="{% url 'post-delete' object.id %}">Delete</a>
-	{% endif %}
-      </div>
+      <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
+      <small class="text-muted">{{ object.date_posted|date:"M d, Y" }}</small>
+	    {% if object.author == user %}
+      <a class="btn btn-danger btn-sm mt-1 mb-1 float-right" href="{% url 'post-delete' object.id %}">Del</a>
+        <a class="btn btn-secondary btn-sm mt-1 mb-1 mr-1 float-right" href="{% url 'post-update' object.id %}">Update</a>
+	    {% endif %}
+    </div>
   </div>
   <h4 class="article-title mt-2 mb-2">{{ object.title }}</h4>
-    {% if object.image %}
-			<div class="row">
-      <img class="img-fluid" src="{{ object.image.url }}" alt = "Image for this post"> 
-			</div>
-    {% endif %}
-			<div style="display:flex">
-      {% for tag in object.tags.all %}
+  {% if object.image %}
+		<div class="row">
+      <img class="w-100 h-100 img-fluid" src="{{ object.image.url }}" alt = "Image for this post"> 
+		</div>
+  {% endif %}
+	<div style="display:flex">
+    {% for tag in object.tags.all %}
       <a href="{% url 'tagged-posts' tag.id %}" class="badge badge-info mt-1" >#{{ tag }}</a>
-      {% endfor %}
-			</div>
-      <p class="article-content mt-2 mb-1">{{ object.content }}</p>
+    {% endfor %}
+	</div>
+  <p class="article-content mt-2 mb-1">{{ object.content }}</p>
 </article>
 <p align = 'right'><small class="text-muted">-- issuetracker post</small><p>
-	<a class="btn btn-primary btn-sm mt-1 mb-1 float-right" href="{% url 'blog-home' %}">Posts Home</a>
+<a class="btn btn-primary btn-sm mt-1 mb-1 float-right" href="{% url 'post-compact-list' %}">List</a>
+<a class="btn btn-primary btn-sm mt-1 mb-1 mr-1 float-right" href="{% url 'blog-home' %}">Home</a>
 {% endblock content %}
