--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -63,7 +63,8 @@
                 <p class='text-muted'> more on issuetracker...
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About Issue Tracker</a></li>
-                    <li class="list-group-item list-group-item-light"><a href="{% url 'website-stats' %}">Issue Tracker Statistics</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{% url 'website-stats' %}">Issue Tracker statistics</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{% url 'dev_note' %}">Dev Note</a></li>
                     <li class="list-group-item list-group-item-light"><a href="https://github.com/iburn78/issuetracker" target="_blank">Issue Tracker github</a></li>
                   </ul>
                 </p>
