adding disqus - wip

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -83,5 +83,6 @@
         e.preventDefault();
         });
     </script>
+    <script id="dsq-count-scr" src="//issuetracker-kr.disqus.com/count.js" async></script>
     </body>
 </html>
