--- a/static/blog/issuetracker_style.css
+++ b/static/blog/issuetracker_style.css
@@ -1,22 +1,21 @@
 [class*="col-"] {
-  /* declare for grid system  
+  /*
   background-color: rgba(255, 255, 255, 0);
   */
 }
 
-@media(min-width:767px){
-  .img_sm{
-    color: darkblue;
-  }
+/* for screen larger than sm (mobile) */
+@media(min-width:767px){   
   .row > img{ 
     margin-left: 7.5px;
   }
+} 
+
+/* for screen sm or smaller */
+@media(max-width:767px){   
 }
 
-@media(max-width:767px){
-  .img_sm{
-    color: blue;
-  }
-  .row > img{ 
-  }
+.list_indent {
+  padding-left: 1.5em;
+  text-indent:-1.5em;
 }
