--- a/blog/templates/blog/dev_note.html
+++ b/blog/templates/blog/dev_note.html
@@ -7,6 +7,7 @@
           <th scope="col">#</th>
           <th scope="col">Items to be developed</th>
           <th scope="col">Priority</th>
+          <th scope="col">Status</th>
         </tr>
       </thead>
       <tbody>
@@ -14,21 +15,31 @@
           <th scope="row">1</th>
           <td>Commenting</td>
           <td>top</td>
+          <td>done</td>
         </tr>
         <tr>
           <th scope="row">2</th>
           <td>Searching</td>
           <td>top</td>
+          <td></td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td>Direct communication with DB</td>
           <td>top</td>
+          <td></td>
         </tr>
         <tr>
           <th scope="row">4</th>
           <td>Multiple tag search</td>
           <td>second</td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>Apporval of user registration</td>
+          <td>second</td>
+          <td>done</td>
         </tr>
       </tbody>
     </table>
