--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -63,6 +63,7 @@
                 <p class='text-muted'> more on issuetracker...
                   <ul class="list-group">
                     <li class="list-group-item list-group-item-light"><a href="{% url 'blog-about' %}">About Issue Tracker</a></li>
+                    <li class="list-group-item list-group-item-light"><a href="{% url 'search-form' %}">Search posts</a></li>
                     <li class="list-group-item list-group-item-light"><a href="{% url 'website-stats' %}">Issue Tracker statistics</a></li>
                     <li class="list-group-item list-group-item-light"><a href="{% url 'dev_note' %}">Dev Note</a></li>
                   </ul>
