--- a/blog/templates/blog/search_form.html
+++ b/blog/templates/blog/search_form.html
@@ -6,7 +6,7 @@
 	<form method="POST" enctype="multipart/form-data">
 	    {% csrf_token %}
 	    <fieldset class ="form-group">
-			{{ form.as_table }}
+			{{ form | crispy }}
 	    </fieldset>
 	    <div class="from-group">
 			<button class="btn btn-outline-info" type="submit">Search</button>
