--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,9 @@
 
     	<!-- Website title and logo -->
 		  <title> Issue Tracker</title>
-		  <link rel="icon" href="{% static 'blog/IssueTracker_Logo.png' %}">
+      <link rel="icon" href="{% static 'blog/IssueTracker_Logo.png' %}">
+      <script src="https://cdn.tiny.cloud/1/d3ybxjdg3551popw6ium8p70cc82tgln8qwiu8yrc9x9v6rm/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script> 
+      <script>tinymce.init({selector:'textarea'});</script>
     </head>
     <body>
         <header class="site-header">
