--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -24,12 +24,13 @@
       <a href="{% url 'tagged-posts' tag.id %}" class="badge badge-info mt-1" >#{{ tag }}</a>
     {% endfor %}
 	</div>
-  <p class="article-content mt-2 mb-1">{{ object.content }}</p>
+  <p class="article-content mt-2 mb-1">{{ object.content | safe }}</p>
 </article>
 <p align = 'right'><small class="text-muted">-- issuetracker post</small><p>
 <a class="btn btn-primary btn-sm mt-1 mb-1 float-right" href="{% url 'post-compact-list' %}">List</a>
 <a class="btn btn-primary btn-sm mt-1 mb-1 mr-1 float-right" href="{% url 'blog-home' %}">Home</a>
-
+<br/>
+<br/>
 <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
