--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,9 +1,9 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h2>You have been logged out</h2>
+    <h4>You have been logged out</h4>
     <div class="border-top pt-3">
-        <small class="text-muted">
+        <p class="text-muted">
 		<a href="{% url 'login' %}">Log In Again</a>
-        </small>
+        </p>
     </div>
 {% endblock content %}
