--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -28,7 +28,7 @@
 </article>
 <p align = 'right'><small class="text-muted">-- issuetracker post</small><p>
 <a class="btn btn-primary btn-sm mt-1 mb-1 float-right" href="{% url 'post-compact-list' %}">List</a>
-<a class="btn btn-primary btn-sm mt-1 mb-1 mr-1 float-right" href="{% url 'blog-home' %}">Home</a>
+<a class="btn btn-primary btn-sm mt-1 mb-1 mr-1 float-right" href="{% url 'blog-home' %}">Posts</a>
 <br/>
 <br/>
 <!-- begin wwww.htmlcommentbox.com -->
