--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -27,7 +27,7 @@
 		<p align = 'right'><small class="text-muted">-- issuetracker post</small></p>
 	{% endfor %}
 	<a class="btn btn-primary btn-sm mt-1 mb-1 float-right" href="{% url 'post-compact-list' %}">List</a>
-	<a class="btn btn-primary btn-sm mt-1 mb-1 mr-1 float-right" href="{% url 'blog-home' %}">Home</a><br/><br/>
+	<a class="btn btn-primary btn-sm mt-1 mb-1 mr-1 float-right" href="{% url 'blog-home' %}">Posts</a><br/><br/>
 	{% if is_paginated %}
         {% if page_obj.has_previous %}
 	        <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
